# C_Cpp-Cmake-Meson-Ninja-Docker

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  meson.build
include/: greet.h
src/: greet.c  main.c
